--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solar",
-  "homepage": "https://AbhijeetSRawat.github.io/solar-company",
+  "homepage": "https://abhijeetsrawat.github.io/solar-company",
   "private": true,
   "version": "0.0.0",
   "type": "module",
